fix: login illustration wrong padding

--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -9,7 +9,8 @@
 
 .illustration {
   display: flex;
-  padding: 100px;
+  justify-self: start;
+  padding-block: 100px;
 }
 
 .login-form {
